# dipster

./: README.md  Readme.md  env_build.py  setup.cfg  setup.py
conda/: meta.yaml
dipster/: __init__.py  grad.py  hyper.py  nets.py  params.py  reporting.py  solver.py  tomo.py  util.py
dipster.egg-info/: PKG-INFO  SOURCES.txt
scripts/: tutorial.ipynb
scripts/workingscripts/: animate.ipynb  astra.ipynb  evaluate.ipynb  generate_test_data.ipynb  measures.ipynb  publication_data.ipynb  publish.ipynb  reconstruct.ipynb  reconstruction.ipynb
