[metadata]
name = dipster
version = 0.0.1
author = Tim Craig
author_email = tim.craig@uantwerpen.be
description = Machine Learning Library for Time Series Analysis During Electron Tomography
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EMAT-tomography/dipster
license = GPL3.0
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3.0 License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True


